Added support for reservation service BACKEND
