# reservation-service/app/models/reservation.rb
@@ -1,3 +1,6 @@
+# frozen_string_literal: true
+
 class Reservation < ApplicationRecord
-  enum kind: [:play, :lesson]
+  enum kind: %i[play lesson train]
+  enum recipient_rsvp: %i[yes no maybe]
 end
